# Qt_Cluster

./: CMakeLists.txt  Main.qml  Test.txt
Backend/: AppContext.h  BaseViewControl.cpp  BaseViewControl.h  CMakeLists.txt  Director.cpp  Director.h  GaugesViewControl.cpp  GaugesViewControl.h  ViewControlIF.h  dataThreading.cpp  dataThreading.h
Backend/DataModel/: CMakeLists.txt  DataDef.h  DataModel.cpp  DataModel.h  DataSet.cpp  DataSet.h
content/: App.qml  CMakeLists.txt  Cluster_content.qmlproject  Cluster_content.qmlproject.qtds  MainForm.ui.qml
src/: main.cpp
